--- a/test.html
+++ b/test.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body>..    <b>Nhập tên nhân viên</b>
+
     <script src="./test.js"></script>
     <b>Nhập tên nhân viên</b>
 </body>
